<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <!-- A -->
    <string name="app_name">WHERE WILL THE SUN SHINE?</string>
    <string name="action_settings">Settings</string>
    <string name="average_temperature">Average Temperature:</string>
    <string name="afternoon">Afternoon</string>
    <string name="action_cities_list">Cities List</string>
    <string name="action_about">About</string>

    <!-- B -->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id_producao" translatable="false">ca-app-pub-7723898994387347/6641662118</string>
    <string name="begin_date_before_end_date">Please set begin date before end date.</string>
    <string name="byBorbiApps">By BorbiApps</string>

    <!-- C -->
    <string name="continue_without_my_location">Continue without my location</string>
    <string name="continue_anyway">Continue anyway</string>
    <string name="celsius" translatable="false">C</string>
    <string name="country_textview">Country:</string>

    <!-- D -->
    <string name="datePeriod">DATE</string>
    <string name="dateFormatDetails">MM/dd, EEEE</string>
    <string name="days">days</string>
    <string name="days_without_rain">Include cloudy days</string>
    <string name="distance_miles" translatable="false"><xliff:g>%1$s</xliff:g> mi</string>
    <string name="distance_kilometers" translatable="false"><xliff:g>%1$s</xliff:g> km</string>
    <string name="display_min_max_temperature" translatable="false"><xliff:g>%1$s</xliff:g>º/<xliff:g>%2$s</xliff:g>º</string>
    <string name="display_min_max_temperature_fahrenheit"><xliff:g>%1$s</xliff:g>º F to <xliff:g>%2$s</xliff:g>º F</string>
    <string name="display_min_max_temperature_celsius"><xliff:g>%1$s</xliff:g> ºC to <xliff:g>%2$s</xliff:g> ºC</string>
    <string name="display_temperature"><xliff:g>%1$s</xliff:g>º</string>
    <string name="display_temperature_fahrenheit"><xliff:g>%1$s</xliff:g> ºF</string>
    <string name="display_temperature_celsius"><xliff:g>%1$s</xliff:g> ºC</string>
    <string name="display_per_cent"><xliff:g>%1$s</xliff:g> \%</string>
    <string name="detail_city">City: <xliff:g>%1$s</xliff:g>.</string>
    <string name="detail_date">Date: <xliff:g>%1$s</xliff:g>.</string>
    <string name="detail_humidity">Humidity: <xliff:g>%1$s</xliff:g> \%</string>
    <string name="detail_precipitation">Precipitation: <xliff:g>%1$s</xliff:g> mm</string>
    <string name="degree_symbol" translatable="false">º</string>
    <string name="dont_care">Don\'t care</string>

    <!-- E -->
    <string name="explanation_why">Why is this important?</string>
    <string name="explanation_localization">If the app can\'t find where you are, it won\'t be possible to determine which cities are in distance radius informed. It\'s essential that the location is set on your device so you can use this app.</string>
    <string name="explanation_internet">If you don\'t have an internet connection, it won\'t be possible to search for the weather forecast. It\'s essential that the internet connection is active in your device so you can use this app.</string>
    <string name="error_localization">It was not possible to determine your location.</string>

    <!-- F -->
    <string name="failure_message_localization">Oops… It was not possible determine your location. Set the location on your device and press \"Try to find me\" button.</string>
    <string name="failure_message_internet">Oops… Your internet connection seems to be down. Check your internet connection and press \"Try again\" button.</string>
    <string name="farenheit" translatable="false">F</string>

    <!-- G -->


    <!-- H -->
    <string name="help_date_period">Weather forecast available only from today until 16 days from now.</string>
    <string name="here_the_sun_shines">Here the sun will shine!</string>
    <string name="historic">Historic</string>
    <string name="help_distance">Maximum distance from your current location.</string>

    <!-- I -->
    <string name="internet_is_down">Your internet connection still seems to be down. Please, try again.</string>
    <string name="invalid_fields">Please verify all red fields.</string>

    <!-- J -->


    <!-- K -->
    <string name="kilometers">km</string>
    <string name="km" translatable="false">KM</string>

    <!-- L -->
    <string name="location_found">Your location was determined successfully.</string>
    <string name="location_not_found_yet">Your location wasn\'t found yet. Please, try again.</string>
    <string name="location_not_found">Your location wasn\'t found yet. This search may not correspond to your current location.</string>
    <string name="location">This app needs you to turn the location services on in order to determine which cities are near you. You won\'t be able to use this app if location isn\'t active.</string>
    <string name="location_turn_on">Turn on location services?</string>
    <string name="location_explanation">Please turn your location services on to use this app.</string>

    <!-- M -->
    <string name="minimum_distance_kilometers">Please inform distance between <xliff:g>%1$s</xliff:g> and <xliff:g>%2$s</xliff:g> kilometers.</string>
    <string name="minimum_distance_miles">Please inform distance between <xliff:g>%1$s</xliff:g> and <xliff:g>%2$s</xliff:g> miles.</string>
    <string name="minimum_days">Please inform number of days between 1 and <xliff:g>%1$s</xliff:g>.</string>
    <string name="more_details" translatable="false">+</string>
    <string name="morning">Morning</string>
    <string name="max_temperature">Maximum temperature:</string>
    <string name="max_distance">DISTANCE</string>
    <string name="miles">mi</string>
    <string name="min_temperature">MINIMUN TEMPERATURE</string>
    <string name="mi" translatable="false">MI</string>
    <string name="min_temperature_abbreviated">MIN</string>
    <string name="max_temperature_abbreviated">MAX</string>

    <!-- N -->
    <string name="next">Next</string>
    <string name="night">Night</string>
    <string name="no_data_available">No sunny city was found. Try to change the dates, the distance, the number of sunny days or the minimum temperature. Currently, we only search cities in Brazil, Canada, France and in the United States.</string>
    <string name="not_now">Not now</string>
    <string name="no_list_cities_found">No cities found for the selected country.</string>

    <!-- O -->


    <!-- P -->
    <string name="previous">Previous</string>

    <!-- Q -->
    <string name="qty_sunny_days">SUNNY DAYS</string>

    <!-- R -->


    <!-- S -->
    <string name="searching_the_sun">Searching …</string>
    <string name="searching_sunny_cities_message0">Click in any city in the following screen to obtain more details about the weather.</string>
    <string name="searching_sunny_cities_message1">We\'re searching for the cities where the sun will shine.</string>
    <string name="searching_sunny_cities_message2">Soon we\'re going to show you all the cities where the sun will shine.</string>
    <string name="searching_sunny_cities_message3">If it\'s taking too long, think about decreasing the distance.</string>
    <string name="searching_sunny_cities_message4"> Take this time and start to pack your bags.</string>
    <string name="searching_sunny_cities_message5"> Soon we are going to show wonderful places to go.</string>
    <string name="searching_sunny_cities_message6">When you see the weather forecast from some city, click in the days to see more details.</string>
    <string name="snow">Snow</string>
    <string name="source">Weather Forecast Source:</string>
    <string name="search">Go!</string>


    <!-- T -->
    <string name="title_activity_filtros" translatable="false">FiltrosActivity</string>
    <string name="title">Where will the sun shine?</string>
    <string name="try_to_find_me">Try to find me</string>
    <string name="try_again">Try again</string>
    <string name="to"> to </string>
    <string name="title_activity_cities_list">Cities List</string>
    <string name="title_activity_about">About</string>

    <!-- U -->


    <!-- V -->
    <string name="version">Version: </string>

    <!-- W -->
    <string name="where_am_i">Where am I?</string>
    <string name="weather_forecast_source_open_weather" translatable="false">openweathermap.org/</string>
    <string name="weather_forecast_source_developer_forecast" translatable="false">darksky.net/poweredby/</string>

    <!-- X -->


    <!-- Y -->
    <string name="yes">Yes</string>


    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="facebookUrl">facebook.com/wherewillthesunshine/</string>
    <string name="twitterUrl" translatable="false">twitter.com/ondetemsol</string>
    <string name="openWeatherName" translatable="false">OpenWeather:</string>
    <string name="developerForecastName" translatable="false">DeveloperForecast:</string>
    <string name="developerForecastCredit">Powered by Dark Sky</string>
    <string name="developerForecastLimitation">It was\'t possible to fetch weather forecast for more than 7 days as a limitation of the meteorology provider.</string>
    <string name="openWeatherCredit" translatable="false">OpenWeather</string>
    <string name="dateFormat">mm/dd/yyyy</string>
    <string name="label_click_ofinion">Do you know our other app, Ofinion? Click in the logo to download it!</string>
    <string name="ots_icon_description">Where Will the Sun Shine? icon</string>
    <string name="ofinion_description">Ofinion icon</string>
    <string name="no_receiving_apps">There is no app in your device that allows using maps.</string>
    <string name="ok">OK</string>
    <string name="see_cities_in_map">Look cities in map!</string>
    <string name="title_activity_maps" translatable="false">Map</string>


    <!-- Z -->

</resources>