<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/detail_city_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_city"/>

    <TextView
        android:id="@+id/detail_date_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_date"/>

    <TextView
        android:id="@+id/label_humidity_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_humidity"/>

</LinearLayout>