<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/detail_date_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

<ImageView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            >
        <TextView
            android:id="@+id/detail_min_temperature_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_humidity"/>
        <TextView
            android:id="@+id/detail_max_temperature_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_humidity"/>
            <TextView
                android:id="@+id/detail_humidity_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_humidity"/>

        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/temperatura_media_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/average_temperature"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/morning_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/morning"/>
            <TextView
                android:id="@+id/morning_temperature_textView"
                android:layout_below="@id/morning_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_temperature"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/afternoon_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/afternoon"/>
            <TextView
                android:id="@+id/afternoon_temperature_textView"
                android:layout_below="@id/afternoon_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/display_temperature"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/night_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/night"/>
            <TextView
                android:id="@+id/night_temperature_textView"
                android:layout_below="@id/night_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/display_temperature"/>
        </RelativeLayout>




    </LinearLayout>



</LinearLayout>